change- link color

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://barbarabrito.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username: barbarabrito
+linkedin_username: barbara-brito-665a5a232/
 
 # Build settings
 theme: minima
